# ext-helloworld

./: CMakeLists.txt  README.md  build.sh  config.m4  config.w32  hello_world_version.h  helloworld.c  helloworld.h  helloworld.php  library.h  php_helloworld.h
.github/workflows/: build.yml
php/: helloworld.php  helloworld.sh
src/: helloworld.c  helloworld_advanced.c
tests/: 001-helloworld.phpt  002-helloworld-advanced.phpt
